# medInria-public

./: CMakeLists.txt
src/layers/medCore/: CMakeLists.txt  medAbstractDataSource.h  medCore.cpp  medCore.h  medSettingsManager.h
src/layers/medCore/data/: medDiffusionGradientReader.cpp  medDiffusionGradientReader.h
src/layers/medCore/job/: medAbstractJob.h  medJobManager.cpp  medJobManager.h
src/layers/medCore/legacy/data/: medAbstractData.h  medAbstractDataWriter.h  medMetaDataKeys.cpp  medMetaDataKeys.h
src/layers/medCore/legacy/database/: medDataIndex.h  medDataManager.h  medDatabaseExporter.h
src/layers/medCore/legacy/gui/: medTabbedViewContainers.h  medTableWidgetChooser.h
src/layers/medCore/legacy/parameters/: medTimeLineParameterL.h
src/layers/medCore/legacy/views/: medAbstractImageView.h
src/layers/medCore/parameter/: medAbstractParameter.cpp  medAbstractParameter.h  medBoolParameter.cpp  medBoolParameter.h  medBoolParameterGroup.cpp  medBoolParameterGroup.h  medDataListParameter.cpp  medDataListParameter.h  medDataParameter.cpp  medDataParameter.h  medDoubleParameter.cpp  medDoubleParameter.h  medIntParameter.cpp  medIntParameter.h  medStringListParameter.cpp  medStringListParameter.h  medStringParameter.cpp  medStringParameter.h  medTestParameter.cpp  medTimeLineParameter.cpp  medTimeLineParameter.h  medTriggerParameter.cpp  medTriggerParameter.h  medVariantListParameter.cpp  medVariantListParameter.h  medVector2DParameter.cpp  medVector2DParameter.h  medVector3DParameter.cpp  medVector3DParameter.h
src/layers/medCore/process/: medAbstractProcess.cpp  medAbstractProcess.h  medAbstractProcessDTK2.cpp
src/layers/medCore/process/arithmetic_operation/: medAbstractAddImageProcess.h  medAbstractArithmeticOperationProcess.cpp  medAbstractArithmeticOperationProcess.h  medAbstractDivideImageProcess.h  medAbstractMultiplyImageProcess.h  medAbstractSubtractImageProcess.h
src/layers/medCore/process/diffusion_processes/: medAbstractDWIMaskingProcess.cpp  medAbstractDWIMaskingProcess.h  medAbstractDiffusionModelEstimationProcess.cpp  medAbstractDiffusionModelEstimationProcess.h  medAbstractDiffusionScalarMapsProcess.cpp  medAbstractDiffusionScalarMapsProcess.h  medAbstractTractographyProcess.cpp  medAbstractTractographyProcess.h  medDiffusionModelEstimationMetaProcess.cpp  medDiffusionModelEstimationMetaProcess.h
src/layers/medCore/process/mask_image/: medAbstractMaskImageProcess.cpp  medAbstractMaskImageProcess.h
src/layers/medCore/process/morphomath_operation/: medAbstractClosingImageProcess.h  medAbstractDilateImageProcess.h  medAbstractErodeImageProcess.h  medAbstractMorphomathOperationProcess.cpp  medAbstractMorphomathOperationProcess.h  medAbstractOpeningImageProcess.h
src/layers/medCore/process/single_filter/: medAbstractAddFilterProcess.h  medAbstractBiasCorrectionProcess.h  (+19 more)
src/layers/medCore/view/: medAbstractParameterGroup.cpp  medAbstractParameterGroup.h  medLayerParameterGroup.cpp  medLayerParameterGroup.h  medViewParameterGroup.cpp  medViewParameterGroup.h
(+551 files in other folders)
